[gd_scene load_steps=25 format=3 uid="uid://dhrrodnlmomfk"]

[ext_resource type="Script" uid="uid://dwgigj4y22g3q" path="res://Slime/slime.gd" id="1_8yoi5"]
[ext_resource type="Texture2D" uid="uid://cuo6idugw2dqc" path="res://Slime/idle.png" id="1_p6lpo"]
[ext_resource type="Texture2D" uid="uid://b1k8bxgxa2gq7" path="res://Slime/evil_run.png" id="2_8yoi5"]
[ext_resource type="Texture2D" uid="uid://clq0idota0b6b" path="res://Slime/slime death.png" id="2_iimiv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iimiv"]
height = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_il7ex"]
atlas = ExtResource("2_iimiv")
region = Rect2(0, 0, 36, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh6qr"]
atlas = ExtResource("2_iimiv")
region = Rect2(72, 0, 36, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_r11pe"]
atlas = ExtResource("1_p6lpo")
region = Rect2(0, 0, 36, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk5ir"]
atlas = ExtResource("1_p6lpo")
region = Rect2(36, 0, 36, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbbka"]
atlas = ExtResource("1_p6lpo")
region = Rect2(72, 0, 36, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j3or"]
atlas = ExtResource("2_8yoi5")
region = Rect2(0, 0, 36, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3wki"]
atlas = ExtResource("2_8yoi5")
region = Rect2(36, 0, 36, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlsc7"]
atlas = ExtResource("2_8yoi5")
region = Rect2(72, 0, 36, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yecs1"]
atlas = ExtResource("2_8yoi5")
region = Rect2(108, 0, 36, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8iko"]
atlas = ExtResource("2_8yoi5")
region = Rect2(144, 0, 36, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_il7ex"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_il7ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh6qr")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r11pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk5ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbbka")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j3or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3wki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlsc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yecs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8iko")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_uh6qr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_23401"]
resource_name = "death"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.151177),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_jgf4n"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_k4cb3"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_23401"]
_data = {
&"RESET": SubResource("Animation_uh6qr"),
&"death": SubResource("Animation_23401"),
&"idle": SubResource("Animation_jgf4n"),
&"run": SubResource("Animation_k4cb3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_iimiv"]
radius = 155.003

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iimiv"]
size = Vector2(13.5, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r11pe"]
size = Vector2(30, 11)

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_8yoi5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -10)
shape = SubResource("CapsuleShape2D_iimiv")
one_way_collision = true
one_way_collision_margin = 2.5
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -15)
sprite_frames = SubResource("SpriteFrames_il7ex")
animation = &"run"
frame = 1
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_23401")
}
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_iimiv")

[node name="SlimeDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeDeath"]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_iimiv")
one_way_collision_margin = 0.0

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_r11pe")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="SlimeDeath" to="." method="_on_slime_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="body_exited" from="PlayerCollision" to="." method="_on_player_collision_body_exited"]
